fixed spacing for mobile

--- a/home.css
+++ b/home.css
@@ -124,7 +124,7 @@ section{
 }
 
 .showCase-description{
-  padding: 4rem 2rem;
+  padding: 4rem 0rem;
   color: #eee;
   font-weight: 800;
 }
